--- a/day_57/templates/index.html
+++ b/day_57/templates/index.html
@@ -8,6 +8,7 @@
     <h1>Hello World!</h1>
     <h2> {{ 3 * 12 }}</h2>
     <h3> Random number: {{ num }}</h3>
+<a href=" {{ url_for('get_blog') }}" > Go to blog.</a>
 </body>
 
 <footer>
