--- a/day_61_Flask_WTForms/templates/index.html
+++ b/day_61_Flask_WTForms/templates/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Secrets</title>
+	{% extends 'bootstrap/base.html' %}
+	{% import "bootstrap/wtf.html" as wtf %}
+	{% block title %}  Secrets {% endblock %}
 </head>
 <body>
+{% block content %}
 <div class="jumbotron">
 	<div class="container">
 		<h1>Welcome</h1>
 		<p>Are you ready to discover my secret?</p>
-		<button class="btn btn-primary btn-lg" href=" {{ url_for('login') }} ">Login</button>
+		<form action="/button" method="post">
+    	<button type="submit" formmethod="post">Login</button>
+		</form>
 	</div>
 </div>
+{% endblock %}
 </body>
 </html>
