--- a/day62_coffee_wifi/templates/index.html
+++ b/day62_coffee_wifi/templates/index.html
@@ -18,7 +18,7 @@
                 <hr class="my-4">
             <p>You've found the right place! Checkout my collection of cafes with data on power socket availability,
                 Wi-Fi speed and coffee quality.</p>
-        <a class="btn btn-warning btn-lg" href="#" role="button">Show Me!</a>
+        <a class="btn btn-warning btn-lg" href="{{ url_for('cafes') }}" role="button">Show Me!</a>
     </div>
 </div>
 
