--- a/day_67_RESTful_routing/templates/make-post.html
+++ b/day_67_RESTful_routing/templates/make-post.html
@@ -1,4 +1,6 @@
-{% block content %} {% include "header.html" %}
+{% from 'bootstrap4/form.html' import render_form %}
+{% block content %}
+{% include "header.html" %}
 
 <!-- Page Header -->
 <header
@@ -9,7 +11,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="page-heading">
-          <!-- : Show a different h1 if editing existing post -->
+          <!-- TO DO: Show a different h1 if editing existing post -->
           <h1>New Post</h1>
           <span class="subheading"
             >You're going to make a great blog post!</span
@@ -24,10 +26,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <!-- :-Add CKEditor and render the form here -->
-        {{ckeditor.load() }}
-        {{ckeditor.config(name='body') }}
-        {{render_form(form, novalidate=True, button_map={"Submit":"primary"}) }}
+        <!-- DONE:-Add CKEditor and render the form here DONE-->
+         {{ ckeditor.load() }}
+         {{ ckeditor.config(name='body') }}
+         {{ render_form(form, novalidate=True, button_map ={"submit":"primary"}) }}
       </div>
     </div>
   </div>
