--- a/day_67_RESTful_routing/templates/post.html
+++ b/day_67_RESTful_routing/templates/post.html
@@ -27,7 +27,7 @@
         {{ post.body|safe }}
 
         <div class="d-flex justify-content-end mb-4">
-          <!-- : Editing posts-->
+          <!-- TO DO: Editing posts-->
           <a
             class="btn btn-primary float-right"
             href="TODO: Add code to edit_post here"
