Restful_Routing_ edit,delete posts

--- a/day_67_RESTful_routing/templates/index.html
+++ b/day_67_RESTful_routing/templates/index.html
@@ -28,10 +28,12 @@
           <h3 class="post-subtitle">{{ post.subtitle }}</h3>
         </a>
         <!-- TO DO: Add code to delete posts below -->
+
         <p class="post-meta">
           Posted by
-          <a href="#">{{post.author}}</a>
+          <a href="#">{{post.author}} </a>
           on {{post.date}}
+          <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
         </p>
       </div>
       <!-- Divider-->
@@ -43,7 +45,7 @@
       <!--  DONE: Adding new posts -->
         <a
           class="btn btn-primary float-right"
-          href="{{ url_for('add_new_post') }}"
+          href="{{ url_for('add_new_post')  }}"
           >Create New Post</a
         >
       </div>
