--- a/day_69_last/templates/login.html
+++ b/day_69_last/templates/login.html
@@ -1,4 +1,4 @@
-{% from "bootstrap5/form.html" import render_form %} {% block content %} {%
+{% from "bootstrap4/form.html" import render_form %} {% block content %} {%
 include "header.html" %}
 
 <!-- Page Header -->
@@ -22,8 +22,16 @@ include "header.html" %}
   <div class="container">
     <div class="row">
       <!-- TODO: add a flash message here for users registering twice -->
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+      {% for message in messages %}
+     <p class="flash">{{ message }}</p>
+      {% endfor %}
+      {% endif %}
+      {% endwith %}
       <div class="col-lg-8 col-md-10 mx-auto">
         <!--TODO: render login form here-->
+         {{render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
   </div>
