--- a/day_69_last/templates/post.html
+++ b/day_69_last/templates/post.html
@@ -26,6 +26,7 @@
       <div class="col-md-10 col-lg-8 col-xl-7">
         {{ post.body|safe }}
         <!--TODO: Only show Edit Post button if user id is 1 (admin user) -->
+        {% if current_user.id == 1: %}
         <div class="d-flex justify-content-end mb-4">
           <a
             class="btn btn-primary float-right"
@@ -33,7 +34,7 @@
             >Edit Post</a
           >
         </div>
-
+        {% endif %}
         <!-- Comments Area -->
         <!-- TODO: Add a CKEditor for commenting below -->
         <div class="comment">
