--- a/day_69_last/templates/register.html
+++ b/day_69_last/templates/register.html
@@ -1,6 +1,6 @@
 {% from "bootstrap4/form.html" import render_form %}
 {% block content %}
-{%include "header.html" %}
+{% include "header.html" %}
 
 <!-- Page Header -->
 <header
@@ -23,8 +23,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <!--TODO: render your registration form here-->
-        {{render_form(form, novalidate= True, button_map = {'Submit':'primary'} ) }}
+      <!--Rendering the registration form here-->
+      {{render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
   </div>
