--- a/day_69_last/templates/post.html
+++ b/day_69_last/templates/post.html
@@ -1,3 +1,4 @@
+{% from "bootstrap5/form.html" import render_form %}
 {% include "header.html" %}
 
 <!-- Page Header-->
@@ -19,14 +20,15 @@
   </div>
 </header>
 
+
 <!-- Post Content -->
 <article>
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         {{ post.body|safe }}
-        <!--TODO: Only show Edit Post button if user id is 1 (admin user) -->
-        {% if current_user.id == 1: %}
+        <!--Only show Edit Post button if user id is 1 (admin user) -->
+        {% if current_user.id == 1 %}
         <div class="d-flex justify-content-end mb-4">
           <a
             class="btn btn-primary float-right"
@@ -35,20 +37,29 @@
           >
         </div>
         {% endif %}
+
         <!-- Comments Area -->
-        <!-- TODO: Add a CKEditor for commenting below -->
-        <div class="comment">
-          <!-- TODO: Show all the comments on a post -->
+        <!-- Load the CKEditor -->
+        {{ ckeditor.load() }}
+        <!-- Configure it with the name of the form field from CommentForm -->
+        {{ ckeditor.config(name='comment_text') }}
+        <!-- Create the wtf quick form from CommentForm -->
+        {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+        <div class="col-lg-8 col-md-10 mx-auto comment">
           <ul class="commentList">
+            {% for comment in post.comments: %}
             <li>
               <div class="commenterImage">
-                <img src="../static/assets/img/default-profile.jpg" />
+                <img
+                  src= "{{ comment.comment_author.email | gravatar }} "
+                />
               </div>
               <div class="commentText">
-                <p>Some comment</p>
-                <span class="date sub-text">comment author name</span>
+                {{comment.text|safe}}
+                <span class="date sub-text">{{comment.comment_author.name }}</span>
               </div>
             </li>
+            {% endfor %}
           </ul>
         </div>
       </div>
